<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".bLogInActivity">


    <!-- Top guideline at 20% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <!-- Bottom guideline at 97% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <!-- Left guideline for 5% left margin -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <!-- Right guideline for 95% right margin -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenterVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/welcome_to_plynt"
        style="@style/BodyText"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <!-- Sign up Text -->
    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/PlyntBlueHeading"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintWidth_percent="0.9" />

    <!-- OR Text -->

    <!-- Second Divider Line -->

    <!-- Email Field with applied custom styles -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/googleLoginImageView"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft">

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/dimension_none"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large_a_little"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/orText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="Or continue with"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line4"
            app:layout_constraintStart_toEndOf="@+id/line" />

        <View
            android:id="@+id/line4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large_a_little"
            android:layout_marginBottom="@dimen/margin_extra_small"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/UserCredentialInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large_a_little"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextView"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/UserCredentialInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/UserCredentialInputField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:layout_constraintWidth_percent="0.9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/UserCredentialInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Register Button -->

    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_default"
        android:fontFamily="@font/raleway_regular"
        android:padding="@dimen/margin_extra_small"
        android:text="Log In"
        android:layout_marginTop="@dimen/margin_medium"
        android:textAllCaps="false"
        android:textColor="@color/plynt_yellow"
        android:textSize="@dimen/body_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:layout_constraintWidth_percent="0.9" />


    <TextView
        android:id="@+id/dontHaveAccountTextView"
        style="@style/SkipTextStyle"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/don_t_have_an_account_yet_register_here"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:textStyle="normal"
        android:textColor="@color/gray"
        android:textSize="@dimen/smallest_text"
        android:paddingTop="@dimen/margin_small" />

    <ImageView
        android:id="@+id/googleLoginImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginRight="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
        app:srcCompat="@drawable/logo_google" />


    <ImageView
        android:id="@+id/facebookLoginImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenterVertical"
        app:srcCompat="@drawable/logo_facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>
